{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 823,
  "lineage": "63c0e14b-69d5-441d-94c2-5c5a1e919e64",
  "resources": [
    {
      "module": "module.aws_alb_controller",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:vpc/vpc-06c4316f4c46dfaff",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-012f480de05604e74",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0da8f463f6adfd76e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06c4316f4c46dfaff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f63d25fccae1ef63",
            "owner_id": "741032333307",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "eks-vpc-testing-vpc",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks_kubernetes_addons.module.aws_vpc_cni[0]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:vpc/vpc-06c4316f4c46dfaff",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-012f480de05604e74",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0da8f463f6adfd76e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06c4316f4c46dfaff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f63d25fccae1ef63",
            "owner_id": "741032333307",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "eks-vpc-testing-vpc",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.kubernetes_app",
      "mode": "data",
      "type": "kubernetes_ingress",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": null,
            "metadata": null,
            "spec": null,
            "status": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.kubernetes_app",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "game-app-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ns-fargate-app/game-app-ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "game-app-ingress",
                "namespace": "ns-fargate-app",
                "resource_version": "2448",
                "uid": "edd743fb-29c7-433a-8ae6-572c93cab162"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "game-app-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/*",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-nsfargat-gameappi-861e538876-15923285.eu-west-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.eks_cluster",
            "data.aws_eks_cluster_auth.aws_iam_authenticator",
            "module.aws_alb_controller.aws_iam_policy.this",
            "module.aws_alb_controller.aws_iam_role.this",
            "module.aws_alb_controller.aws_iam_role_policy_attachment.this",
            "module.aws_alb_controller.aws_iam_role_policy_attachment.vpc-cni-addon",
            "module.aws_alb_controller.data.aws_caller_identity.current",
            "module.aws_alb_controller.data.aws_eks_cluster.selected",
            "module.aws_alb_controller.data.aws_eks_cluster_auth.selected",
            "module.aws_alb_controller.data.aws_iam_policy_document.ec2_assume_role",
            "module.aws_alb_controller.data.aws_iam_policy_document.eks_oidc_assume_role",
            "module.aws_alb_controller.data.aws_region.current",
            "module.aws_alb_controller.data.aws_vpc.selected",
            "module.aws_alb_controller.helm_release.alb_controller",
            "module.aws_alb_controller.kubernetes_cluster_role.this",
            "module.aws_alb_controller.kubernetes_cluster_role_binding.this",
            "module.aws_alb_controller.kubernetes_service_account.this",
            "module.coredns_patching.data.aws_caller_identity.current",
            "module.coredns_patching.data.aws_eks_cluster.selected",
            "module.coredns_patching.data.aws_eks_cluster_auth.selected",
            "module.coredns_patching.data.aws_region.current",
            "module.coredns_patching.null_resource.coredns_patch_windows",
            "module.coredns_patching.null_resource.coredns_restart",
            "module.coredns_patching.null_resource.update_kubeconfig_windows",
            "module.eks.aws_cloudwatch_log_group.cloudwatch_log_group",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_eks_fargate_profile.eks_fargate_app",
            "module.eks.aws_eks_fargate_profile.eks_fargate_system",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.AmazonEKSClusterCloudWatchMetricsPolicy",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.eks_fargate_role",
            "module.eks.aws_iam_role.eks_fargate_system_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSCloudWatchMetricsPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy1",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy2",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSFargatePodExecutionRolePolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSFargatePodExecutionRolePolicy2",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController1",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController2",
            "module.eks.data.tls_certificate.auth",
            "module.kubernetes_app.kubernetes_deployment.game-app",
            "module.kubernetes_app.kubernetes_namespace.application_namespace",
            "module.kubernetes_app.kubernetes_service_v1.game-app-service",
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.private_nat_gw_route",
            "module.vpc.aws_route.public_internet_route",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private-rt-assotion",
            "module.vpc.aws_route_table_association.public-rt-assotion",
            "module.vpc.aws_security_group.custom",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes_app",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "application_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ns-fargate-app",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/name": "sample-game-app"
                },
                "name": "ns-fargate-app",
                "resource_version": "2007",
                "uid": "71d6510d-53ab-4bc1-b01a-29c713220d69"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster.eks_cluster",
            "data.aws_eks_cluster_auth.aws_iam_authenticator",
            "module.aws_alb_controller.aws_iam_policy.this",
            "module.aws_alb_controller.aws_iam_role.this",
            "module.aws_alb_controller.aws_iam_role_policy_attachment.this",
            "module.aws_alb_controller.aws_iam_role_policy_attachment.vpc-cni-addon",
            "module.aws_alb_controller.data.aws_caller_identity.current",
            "module.aws_alb_controller.data.aws_eks_cluster.selected",
            "module.aws_alb_controller.data.aws_eks_cluster_auth.selected",
            "module.aws_alb_controller.data.aws_iam_policy_document.ec2_assume_role",
            "module.aws_alb_controller.data.aws_iam_policy_document.eks_oidc_assume_role",
            "module.aws_alb_controller.data.aws_region.current",
            "module.aws_alb_controller.data.aws_vpc.selected",
            "module.aws_alb_controller.helm_release.alb_controller",
            "module.aws_alb_controller.kubernetes_cluster_role.this",
            "module.aws_alb_controller.kubernetes_cluster_role_binding.this",
            "module.aws_alb_controller.kubernetes_service_account.this",
            "module.coredns_patching.data.aws_caller_identity.current",
            "module.coredns_patching.data.aws_eks_cluster.selected",
            "module.coredns_patching.data.aws_eks_cluster_auth.selected",
            "module.coredns_patching.data.aws_region.current",
            "module.coredns_patching.null_resource.coredns_patch_windows",
            "module.coredns_patching.null_resource.coredns_restart",
            "module.coredns_patching.null_resource.update_kubeconfig_windows",
            "module.eks.aws_cloudwatch_log_group.cloudwatch_log_group",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_eks_fargate_profile.eks_fargate_app",
            "module.eks.aws_eks_fargate_profile.eks_fargate_system",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.AmazonEKSClusterCloudWatchMetricsPolicy",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.eks_fargate_role",
            "module.eks.aws_iam_role.eks_fargate_system_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSCloudWatchMetricsPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy1",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy2",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSFargatePodExecutionRolePolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSFargatePodExecutionRolePolicy2",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController1",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController2",
            "module.eks.data.tls_certificate.auth",
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.private_nat_gw_route",
            "module.vpc.aws_route.public_internet_route",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private-rt-assotion",
            "module.vpc.aws_route_table_association.public-rt-assotion",
            "module.vpc.aws_security_group.custom",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes_app",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "game-app-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "ns-fargate-app/game-app-service",
            "metadata": [
              {
                "generation": 0,
                "name": "game-app-service",
                "namespace": "ns-fargate-app",
                "resource_version": "2422",
                "uid": "b5c59a6a-422a-4157-98bb-3bdb94edc2d0"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.100.36.200",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31382,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "sample-game-app"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster.eks_cluster",
            "data.aws_eks_cluster_auth.aws_iam_authenticator",
            "module.aws_alb_controller.aws_iam_policy.this",
            "module.aws_alb_controller.aws_iam_role.this",
            "module.aws_alb_controller.aws_iam_role_policy_attachment.this",
            "module.aws_alb_controller.aws_iam_role_policy_attachment.vpc-cni-addon",
            "module.aws_alb_controller.data.aws_caller_identity.current",
            "module.aws_alb_controller.data.aws_eks_cluster.selected",
            "module.aws_alb_controller.data.aws_eks_cluster_auth.selected",
            "module.aws_alb_controller.data.aws_iam_policy_document.ec2_assume_role",
            "module.aws_alb_controller.data.aws_iam_policy_document.eks_oidc_assume_role",
            "module.aws_alb_controller.data.aws_region.current",
            "module.aws_alb_controller.data.aws_vpc.selected",
            "module.aws_alb_controller.helm_release.alb_controller",
            "module.aws_alb_controller.kubernetes_cluster_role.this",
            "module.aws_alb_controller.kubernetes_cluster_role_binding.this",
            "module.aws_alb_controller.kubernetes_service_account.this",
            "module.coredns_patching.data.aws_caller_identity.current",
            "module.coredns_patching.data.aws_eks_cluster.selected",
            "module.coredns_patching.data.aws_eks_cluster_auth.selected",
            "module.coredns_patching.data.aws_region.current",
            "module.coredns_patching.null_resource.coredns_patch_windows",
            "module.coredns_patching.null_resource.coredns_restart",
            "module.coredns_patching.null_resource.update_kubeconfig_windows",
            "module.eks.aws_cloudwatch_log_group.cloudwatch_log_group",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_eks_fargate_profile.eks_fargate_app",
            "module.eks.aws_eks_fargate_profile.eks_fargate_system",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.AmazonEKSClusterCloudWatchMetricsPolicy",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.eks_fargate_role",
            "module.eks.aws_iam_role.eks_fargate_system_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSCloudWatchMetricsPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy1",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy2",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSFargatePodExecutionRolePolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSFargatePodExecutionRolePolicy2",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController1",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController2",
            "module.eks.data.tls_certificate.auth",
            "module.kubernetes_app.kubernetes_deployment.game-app",
            "module.kubernetes_app.kubernetes_namespace.application_namespace",
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.private_nat_gw_route",
            "module.vpc.aws_route.public_internet_route",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private-rt-assotion",
            "module.vpc.aws_route_table_association.public-rt-assotion",
            "module.vpc.aws_security_group.custom",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:security-group/sg-0eac89307dd77b075",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eac89307dd77b075",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "741032333307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "default-sg-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "default-sg-acn-eks-clstr-testing"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f3b5f92b41be102",
            "domain": "vpc",
            "id": "eipalloc-09f3b5f92b41be102",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-171-35-164.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.35.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat-ip-1-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat-ip-1-acn-eks-clstr-testing"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1566ed3e81c5a85",
            "domain": "vpc",
            "id": "eipalloc-0e1566ed3e81c5a85",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-108-128-230-168.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.230.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat-ip-2-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat-ip-2-acn-eks-clstr-testing"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b96a86aaa3774b21",
            "domain": "vpc",
            "id": "eipalloc-0b96a86aaa3774b21",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-250-86-230.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.250.86.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat-ip-3-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat-ip-3-acn-eks-clstr-testing"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:internet-gateway/igw-0a6888bcc81cc4944",
            "id": "igw-0a6888bcc81cc4944",
            "owner_id": "741032333307",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "internet_gw-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "internet_gw-acn-eks-clstr-testing"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f3b5f92b41be102",
            "connectivity_type": "public",
            "id": "nat-022b4dcc6511d12e1",
            "network_interface_id": "eni-0ac28414733752e0c",
            "private_ip": "192.168.0.87",
            "public_ip": "54.171.35.164",
            "subnet_id": "subnet-07ecfb7d26103dd42",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat_gateway-1-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat_gateway-1-acn-eks-clstr-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1566ed3e81c5a85",
            "connectivity_type": "public",
            "id": "nat-0388db6b76a9cd7f9",
            "network_interface_id": "eni-0447b164bc07bce10",
            "private_ip": "192.168.1.73",
            "public_ip": "108.128.230.168",
            "subnet_id": "subnet-038ab596bb580e104",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat_gateway-2-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat_gateway-2-acn-eks-clstr-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b96a86aaa3774b21",
            "connectivity_type": "public",
            "id": "nat-056c87b7361cd9be0",
            "network_interface_id": "eni-022eb4588bccccb1f",
            "private_ip": "192.168.2.72",
            "public_ip": "34.250.86.230",
            "subnet_id": "subnet-056b71190493b6a39",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat_gateway-3-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "nat_gateway-3-acn-eks-clstr-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ab609b1fef7feb631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-022b4dcc6511d12e1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab609b1fef7feb63",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-075ec9a90061301721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0388db6b76a9cd7f9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075ec9a9006130172",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c79e9df7c4758b871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-056c87b7361cd9be0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c79e9df7c4758b87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a6888bcc81cc4944",
            "id": "r-rtb-007cbce53fe3d598f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007cbce53fe3d598f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:route-table/rtb-0ab609b1fef7feb63",
            "id": "rtb-0ab609b1fef7feb63",
            "owner_id": "741032333307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-route-table-1-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-route-table-1-acn-eks-clstr-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:route-table/rtb-075ec9a9006130172",
            "id": "rtb-075ec9a9006130172",
            "owner_id": "741032333307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-route-table-2-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-route-table-2-acn-eks-clstr-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:route-table/rtb-0c79e9df7c4758b87",
            "id": "rtb-0c79e9df7c4758b87",
            "owner_id": "741032333307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-route-table-3-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-route-table-3-acn-eks-clstr-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:route-table/rtb-007cbce53fe3d598f",
            "id": "rtb-007cbce53fe3d598f",
            "owner_id": "741032333307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-route-table-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-route-table-acn-eks-clstr-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assotion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0487a5a7ec18c3a6a",
            "route_table_id": "rtb-0ab609b1fef7feb63",
            "subnet_id": "subnet-086f9d734f4f9fa7d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.private_nat_gw_route",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b1e675ce08f026e",
            "route_table_id": "rtb-075ec9a9006130172",
            "subnet_id": "subnet-0dd42b6ce1cacd086"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.private_nat_gw_route",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b528fbc88052275",
            "route_table_id": "rtb-0c79e9df7c4758b87",
            "subnet_id": "subnet-0c1730323d065a79f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route.private_nat_gw_route",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assotion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9b560041b9619f7",
            "route_table_id": "rtb-007cbce53fe3d598f",
            "subnet_id": "subnet-07ecfb7d26103dd42"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_route.public_internet_route",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1dde5b683d7e0be",
            "route_table_id": "rtb-007cbce53fe3d598f",
            "subnet_id": "subnet-038ab596bb580e104"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_route.public_internet_route",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068900b9c89739b41",
            "route_table_id": "rtb-007cbce53fe3d598f",
            "subnet_id": "subnet-056b71190493b6a39"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_route.public_internet_route",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:security-group/sg-05f08bb7842d7a01c",
            "description": "Custom security group to allow inbound/outbound from the multiple sources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic allowed to Internet from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f08bb7842d7a01c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Receive traffic from internet on HTTP Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Receive traffic from internet on TLS Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "custom-sg-acn-eks-clstr-testing",
            "name_prefix": "",
            "owner_id": "741032333307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "custom-sg-acn-eks-clstr-testing"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "custom-sg-acn-eks-clstr-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-086f9d734f4f9fa7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086f9d734f4f9fa7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-subnet-testing-eu-west-1a",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-subnet-testing-eu-west-1a",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-0dd42b6ce1cacd086",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd42b6ce1cacd086",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-subnet-testing-eu-west-1b",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-subnet-testing-eu-west-1b",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-0c1730323d065a79f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1730323d065a79f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-subnet-testing-eu-west-1c",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "private-subnet-testing-eu-west-1c",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-07ecfb7d26103dd42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ecfb7d26103dd42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-subnet-testing-eu-west-1a",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-subnet-testing-eu-west-1a",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-038ab596bb580e104",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038ab596bb580e104",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-subnet-testing-eu-west-1b",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-subnet-testing-eu-west-1b",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-056b71190493b6a39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056b71190493b6a39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-subnet-testing-eu-west-1c",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "public-subnet-testing-eu-west-1c",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06c4316f4c46dfaff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:vpc/vpc-06c4316f4c46dfaff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-095b87b3d8439fbc3",
            "default_route_table_id": "rtb-0f63d25fccae1ef63",
            "default_security_group_id": "sg-0eac89307dd77b075",
            "dhcp_options_id": "dopt-0da8f463f6adfd76e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06c4316f4c46dfaff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f63d25fccae1ef63",
            "owner_id": "741032333307",
            "tags": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "eks-vpc-testing-vpc",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared"
            },
            "tags_all": {
              "Environment": "testing",
              "Group": "eks-fargate",
              "Name": "eks-vpc-testing-vpc",
              "kubernetes.io/cluster/acn-eks-clstr-testing": "shared"
            }
          }
        }
      ]
    }
  ]
}